[package]
name = "findbackup01"
version = "0.1.0"
authors = ["jpretired"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0"
libsql = "^0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
